# AI-Platform

./: README.md  pyproject.toml
backend/: pyproject.toml  pyproject.toml.save
backend/app/: main.py  models.py
backend/app/agents/: base.py  control_agent.py  core_agents.py  core_agents.py.save  registry.py
backend/app/api/: auth.py  chat.py  documents.py  monitoring.py  outputs.py  workflows.py  workspaces.py
backend/app/core/: config.py  security.py
backend/app/monitoring/: hallucination.py  persistence.py  token_logger.py
backend/app/rag/: embeddings.py  pipeline.py  retrieval.py
backend/app/services/: document_service.py  repo.py  tool_layer.py
backend/app/workflow/: engine.py  templates.py
backend/stratos_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  fakes.py  test_engine.py  test_monitoring.py
frontend/: index.html  package-lock.json
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: PrivateRoute.tsx
frontend/src/pages/: AppShell.tsx  Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Workflows.tsx
